add chat-bot api
